--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -6845,22 +6845,8 @@ video {
   width: max-content;
 }
 
-.min-w-0 {
-  min-width: 0px;
-}
-
-.min-w-full {
-  min-width: 100%;
-}
-
-.min-w-min {
-  min-width: -webkit-min-content;
-  min-width: min-content;
-}
-
-.min-w-max {
-  min-width: -webkit-max-content;
-  min-width: max-content;
+.min-w-1\/2 {
+  min-width: 50%;
 }
 
 .max-w-0 {
@@ -38540,22 +38526,8 @@ video {
     width: max-content;
   }
 
-  .sm\:min-w-0 {
-    min-width: 0px;
-  }
-
-  .sm\:min-w-full {
-    min-width: 100%;
-  }
-
-  .sm\:min-w-min {
-    min-width: -webkit-min-content;
-    min-width: min-content;
-  }
-
-  .sm\:min-w-max {
-    min-width: -webkit-max-content;
-    min-width: max-content;
+  .sm\:min-w-1\/2 {
+    min-width: 50%;
   }
 
   .sm\:max-w-0 {
@@ -69749,22 +69721,8 @@ video {
     width: max-content;
   }
 
-  .md\:min-w-0 {
-    min-width: 0px;
-  }
-
-  .md\:min-w-full {
-    min-width: 100%;
-  }
-
-  .md\:min-w-min {
-    min-width: -webkit-min-content;
-    min-width: min-content;
-  }
-
-  .md\:min-w-max {
-    min-width: -webkit-max-content;
-    min-width: max-content;
+  .md\:min-w-1\/2 {
+    min-width: 50%;
   }
 
   .md\:max-w-0 {
@@ -100958,22 +100916,8 @@ video {
     width: max-content;
   }
 
-  .lg\:min-w-0 {
-    min-width: 0px;
-  }
-
-  .lg\:min-w-full {
-    min-width: 100%;
-  }
-
-  .lg\:min-w-min {
-    min-width: -webkit-min-content;
-    min-width: min-content;
-  }
-
-  .lg\:min-w-max {
-    min-width: -webkit-max-content;
-    min-width: max-content;
+  .lg\:min-w-1\/2 {
+    min-width: 50%;
   }
 
   .lg\:max-w-0 {
@@ -132167,22 +132111,8 @@ video {
     width: max-content;
   }
 
-  .xl\:min-w-0 {
-    min-width: 0px;
-  }
-
-  .xl\:min-w-full {
-    min-width: 100%;
-  }
-
-  .xl\:min-w-min {
-    min-width: -webkit-min-content;
-    min-width: min-content;
-  }
-
-  .xl\:min-w-max {
-    min-width: -webkit-max-content;
-    min-width: max-content;
+  .xl\:min-w-1\/2 {
+    min-width: 50%;
   }
 
   .xl\:max-w-0 {
@@ -163376,22 +163306,8 @@ video {
     width: max-content;
   }
 
-  .\32xl\:min-w-0 {
-    min-width: 0px;
-  }
-
-  .\32xl\:min-w-full {
-    min-width: 100%;
-  }
-
-  .\32xl\:min-w-min {
-    min-width: -webkit-min-content;
-    min-width: min-content;
-  }
-
-  .\32xl\:min-w-max {
-    min-width: -webkit-max-content;
-    min-width: max-content;
+  .\32xl\:min-w-1\/2 {
+    min-width: 50%;
   }
 
   .\32xl\:max-w-0 {
