--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -3149,16 +3149,16 @@ video {
     height: 18rem;
   }
 
-  .lg\:h-80 {
-    height: 20rem;
+  .lg\:h-96 {
+    height: 24rem;
   }
 
   .lg\:h-full {
     height: 100%;
   }
 
-  .lg\:w-80 {
-    width: 20rem;
+  .lg\:w-96 {
+    width: 24rem;
   }
 
   .lg\:w-1\/2 {
@@ -3240,6 +3240,10 @@ video {
     --tw-space-x-reverse: 0;
     margin-right: calc(1.5rem * var(--tw-space-x-reverse));
     margin-left: calc(1.5rem * calc(1 - var(--tw-space-x-reverse)));
+  }
+
+  .lg\:object-cover {
+    object-fit: cover;
   }
 
   .lg\:p-0 {
