--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -808,10 +808,6 @@ video {
   margin-bottom: 3.5rem;
 }
 
-.mb-20 {
-  margin-bottom: 5rem;
-}
-
 .mb-24 {
   margin-bottom: 6rem;
 }
@@ -956,10 +952,6 @@ video {
 
 .h-16 {
   height: 4rem;
-}
-
-.h-20 {
-  height: 5rem;
 }
 
 .h-56 {
@@ -1648,6 +1640,11 @@ video {
 .bg-green-100 {
   --tw-bg-opacity: 1;
   background-color: rgba(209, 250, 229, var(--tw-bg-opacity));
+}
+
+.bg-blue-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgba(96, 165, 250, var(--tw-bg-opacity));
 }
 
 .bg-blue-700 {
@@ -2356,6 +2353,10 @@ video {
   opacity: 0;
 }
 
+.opacity-30 {
+  opacity: 0.3;
+}
+
 .opacity-100 {
   opacity: 1;
 }
@@ -2725,6 +2726,10 @@ video {
   .sm\:gap-x-6 {
     -webkit-column-gap: 1.5rem;
             column-gap: 1.5rem;
+  }
+
+  .sm\:gap-y-10 {
+    row-gap: 2.5rem;
   }
 
   .sm\:space-x-8 > :not([hidden]) ~ :not([hidden]) {
@@ -3238,6 +3243,10 @@ video {
   .lg\:flex-grow-0 {
     -webkit-flex-grow: 0;
             flex-grow: 0;
+  }
+
+  .lg\:grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
   .lg\:grid-cols-4 {
