--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -611,10 +611,6 @@ video {
   right: 0px;
 }
 
-.bottom-0 {
-  bottom: 0px;
-}
-
 .left-0 {
   left: 0px;
 }
@@ -690,9 +686,19 @@ video {
   margin-bottom: 1rem;
 }
 
+.my-20 {
+  margin-top: 5rem;
+  margin-bottom: 5rem;
+}
+
 .my-28 {
   margin-top: 7rem;
   margin-bottom: 7rem;
+}
+
+.my-52 {
+  margin-top: 13rem;
+  margin-bottom: 13rem;
 }
 
 .-my-2 {
@@ -740,10 +746,6 @@ video {
   margin-top: 3.5rem;
 }
 
-.mt-16 {
-  margin-top: 4rem;
-}
-
 .mt-20 {
   margin-top: 5rem;
 }
@@ -752,12 +754,20 @@ video {
   margin-top: 6rem;
 }
 
+.mt-28 {
+  margin-top: 7rem;
+}
+
 .mt-40 {
   margin-top: 10rem;
 }
 
 .mt-44 {
   margin-top: 11rem;
+}
+
+.mt-52 {
+  margin-top: 13rem;
 }
 
 .mr-1 {
@@ -820,8 +830,8 @@ video {
   margin-bottom: 11rem;
 }
 
-.mb-48 {
-  margin-bottom: 12rem;
+.mb-52 {
+  margin-bottom: 13rem;
 }
 
 .ml-1 {
@@ -886,12 +896,20 @@ video {
   display: grid;
 }
 
+.contents {
+  display: contents;
+}
+
 .hidden {
   display: none;
 }
 
 .h-0 {
   height: 0px;
+}
+
+.h-1 {
+  height: 0.25rem;
 }
 
 .h-4 {
@@ -914,10 +932,6 @@ video {
   height: 2rem;
 }
 
-.h-9 {
-  height: 2.25rem;
-}
-
 .h-10 {
   height: 2.5rem;
 }
@@ -932,6 +946,14 @@ video {
 
 .h-56 {
   height: 14rem;
+}
+
+.h-96 {
+  height: 24rem;
+}
+
+.h-4\/6 {
+  height: 66.666667%;
 }
 
 .h-full {
@@ -1010,6 +1032,10 @@ video {
   width: 80%;
 }
 
+.w-7\/12 {
+  width: 58.333333%;
+}
+
 .w-full {
   width: 100%;
 }
@@ -1036,6 +1062,10 @@ video {
 
 .max-w-3xl {
   max-width: 48rem;
+}
+
+.max-w-6xl {
+  max-width: 72rem;
 }
 
 .max-w-7xl {
@@ -1098,6 +1128,14 @@ video {
   --tw-translate-x: -100%;
 }
 
+.translate-y-0 {
+  --tw-translate-y: 0px;
+}
+
+.translate-y-4 {
+  --tw-translate-y: 1rem;
+}
+
 .hover\:-translate-y-1:hover {
   --tw-translate-y: -0.25rem;
 }
@@ -1120,9 +1158,14 @@ video {
   --tw-scale-y: 1;
 }
 
-.hover\:scale-125:hover {
-  --tw-scale-x: 1.25;
-  --tw-scale-y: 1.25;
+.hover\:scale-105:hover {
+  --tw-scale-x: 1.05;
+  --tw-scale-y: 1.05;
+}
+
+.hover\:scale-110:hover {
+  --tw-scale-x: 1.1;
+  --tw-scale-y: 1.1;
 }
 
 @-webkit-keyframes spin {
@@ -1203,10 +1246,6 @@ video {
   cursor: pointer;
 }
 
-.cursor-not-allowed {
-  cursor: not-allowed;
-}
-
 .appearance-none {
   -webkit-appearance: none;
           appearance: none;
@@ -1251,6 +1290,11 @@ video {
           align-items: flex-start;
 }
 
+.items-end {
+  -webkit-align-items: flex-end;
+          align-items: flex-end;
+}
+
 .items-center {
   -webkit-align-items: center;
           align-items: center;
@@ -1264,6 +1308,10 @@ video {
 .justify-between {
   -webkit-justify-content: space-between;
           justify-content: space-between;
+}
+
+.justify-items-end {
+  justify-items: end;
 }
 
 .justify-items-center {
@@ -1282,6 +1330,10 @@ video {
   gap: 1rem;
 }
 
+.gap-5 {
+  gap: 1.25rem;
+}
+
 .gap-6 {
   gap: 1.5rem;
 }
@@ -1292,6 +1344,10 @@ video {
 
 .gap-12 {
   gap: 3rem;
+}
+
+.gap-16 {
+  gap: 4rem;
 }
 
 .gap-x-4 {
@@ -1371,6 +1427,10 @@ video {
   border-color: rgba(209, 213, 219, var(--tw-divide-opacity));
 }
 
+.overflow-auto {
+  overflow: auto;
+}
+
 .overflow-hidden {
   overflow: hidden;
 }
@@ -1409,6 +1469,14 @@ video {
   border-radius: 0.5rem;
 }
 
+.rounded-2xl {
+  border-radius: 1rem;
+}
+
+.rounded-3xl {
+  border-radius: 1.5rem;
+}
+
 .rounded-full {
   border-radius: 9999px;
 }
@@ -1432,12 +1500,12 @@ video {
   border-width: 2px;
 }
 
-.border {
-  border-width: 1px;
+.border-4 {
+  border-width: 4px;
 }
 
-.border-t-2 {
-  border-top-width: 2px;
+.border {
+  border-width: 1px;
 }
 
 .border-t {
@@ -1502,6 +1570,11 @@ video {
   border-color: rgba(79, 70, 229, var(--tw-border-opacity));
 }
 
+.border-indigo-800 {
+  --tw-border-opacity: 1;
+  border-color: rgba(55, 48, 163, var(--tw-border-opacity));
+}
+
 .group:hover .group-hover\:border-gray-400 {
   --tw-border-opacity: 1;
   border-color: rgba(156, 163, 175, var(--tw-border-opacity));
@@ -1521,8 +1594,24 @@ video {
   border-color: rgba(99, 102, 241, var(--tw-border-opacity));
 }
 
+.border-opacity-0 {
+  --tw-border-opacity: 0;
+}
+
+.border-opacity-5 {
+  --tw-border-opacity: 0.05;
+}
+
 .border-opacity-90 {
   --tw-border-opacity: 0.9;
+}
+
+.hover\:border-opacity-100:hover {
+  --tw-border-opacity: 1;
+}
+
+.bg-transparent {
+  background-color: transparent;
 }
 
 .bg-white {
@@ -1548,6 +1637,11 @@ video {
 .bg-gray-300 {
   --tw-bg-opacity: 1;
   background-color: rgba(209, 213, 219, var(--tw-bg-opacity));
+}
+
+.bg-gray-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgba(107, 114, 128, var(--tw-bg-opacity));
 }
 
 .bg-gray-600 {
@@ -1585,14 +1679,14 @@ video {
   background-color: rgba(224, 231, 255, var(--tw-bg-opacity));
 }
 
-.bg-indigo-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgba(99, 102, 241, var(--tw-bg-opacity));
-}
-
 .bg-indigo-600 {
   --tw-bg-opacity: 1;
   background-color: rgba(79, 70, 229, var(--tw-bg-opacity));
+}
+
+.bg-indigo-900 {
+  --tw-bg-opacity: 1;
+  background-color: rgba(49, 46, 129, var(--tw-bg-opacity));
 }
 
 .group:hover .group-hover\:bg-indigo-800 {
@@ -1635,6 +1729,10 @@ video {
   background-color: rgba(67, 56, 202, var(--tw-bg-opacity));
 }
 
+.bg-opacity-50 {
+  --tw-bg-opacity: 0.5;
+}
+
 .bg-opacity-75 {
   --tw-bg-opacity: 0.75;
 }
@@ -1661,6 +1759,10 @@ video {
 
 .p-4 {
   padding: 1rem;
+}
+
+.p-5 {
+  padding: 1.25rem;
 }
 
 .p-6 {
@@ -1704,11 +1806,6 @@ video {
 .px-8 {
   padding-left: 2rem;
   padding-right: 2rem;
-}
-
-.py-0 {
-  padding-top: 0px;
-  padding-bottom: 0px;
 }
 
 .py-1 {
@@ -1761,11 +1858,6 @@ video {
   padding-bottom: 6rem;
 }
 
-.py-0\.5 {
-  padding-top: 0.125rem;
-  padding-bottom: 0.125rem;
-}
-
 .pt-1 {
   padding-top: 0.25rem;
 }
@@ -1798,12 +1890,12 @@ video {
   padding-top: 7rem;
 }
 
-.pr-1 {
-  padding-right: 0.25rem;
+.pt-60 {
+  padding-top: 15rem;
 }
 
-.pr-2 {
-  padding-right: 0.5rem;
+.pr-1 {
+  padding-right: 0.25rem;
 }
 
 .pr-3 {
@@ -1846,8 +1938,16 @@ video {
   padding-bottom: 4rem;
 }
 
+.pb-20 {
+  padding-bottom: 5rem;
+}
+
 .pb-40 {
   padding-bottom: 10rem;
+}
+
+.pb-60 {
+  padding-bottom: 15rem;
 }
 
 .pl-1 {
@@ -1862,8 +1962,20 @@ video {
   padding-left: 1rem;
 }
 
+.pl-6 {
+  padding-left: 1.5rem;
+}
+
 .pl-8 {
   padding-left: 2rem;
+}
+
+.pl-10 {
+  padding-left: 2.5rem;
+}
+
+.pl-20 {
+  padding-left: 5rem;
 }
 
 .text-left {
@@ -1880,6 +1992,10 @@ video {
 
 .align-middle {
   vertical-align: middle;
+}
+
+.align-bottom {
+  vertical-align: bottom;
 }
 
 .text-xs {
@@ -1922,6 +2038,11 @@ video {
   line-height: 2.5rem;
 }
 
+.text-5xl {
+  font-size: 3rem;
+  line-height: 1;
+}
+
 .font-normal {
   font-weight: 400;
 }
@@ -1960,10 +2081,6 @@ video {
 
 .tracking-tight {
   letter-spacing: -0.025em;
-}
-
-.tracking-wide {
-  letter-spacing: 0.025em;
 }
 
 .tracking-wider {
@@ -2030,6 +2147,11 @@ video {
   color: rgba(251, 191, 36, var(--tw-text-opacity));
 }
 
+.text-green-600 {
+  --tw-text-opacity: 1;
+  color: rgba(5, 150, 105, var(--tw-text-opacity));
+}
+
 .text-green-800 {
   --tw-text-opacity: 1;
   color: rgba(6, 95, 70, var(--tw-text-opacity));
@@ -2043,11 +2165,6 @@ video {
 .text-blue-900 {
   --tw-text-opacity: 1;
   color: rgba(30, 58, 138, var(--tw-text-opacity));
-}
-
-.text-indigo-400 {
-  --tw-text-opacity: 1;
-  color: rgba(129, 140, 248, var(--tw-text-opacity));
 }
 
 .text-indigo-600 {
@@ -2078,11 +2195,6 @@ video {
 .hover\:text-white:hover {
   --tw-text-opacity: 1;
   color: rgba(255, 255, 255, var(--tw-text-opacity));
-}
-
-.hover\:text-gray-200:hover {
-  --tw-text-opacity: 1;
-  color: rgba(229, 231, 235, var(--tw-text-opacity));
 }
 
 .hover\:text-gray-300:hover {
@@ -2194,24 +2306,12 @@ video {
   opacity: 0;
 }
 
-.opacity-60 {
-  opacity: 0.6;
-}
-
 .opacity-100 {
   opacity: 1;
 }
 
 .group:hover .group-hover\:opacity-75 {
   opacity: 0.75;
-}
-
-.hover\:opacity-75:hover {
-  opacity: 0.75;
-}
-
-.hover\:opacity-100:hover {
-  opacity: 1;
 }
 
 *, ::before, ::after {
@@ -2235,6 +2335,11 @@ video {
 
 .shadow-lg {
   --tw-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-xl {
+  --tw-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
@@ -2335,6 +2440,12 @@ video {
           filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
+.transition-all {
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
 .transition {
   transition-property: background-color, border-color, color, fill, stroke, opacity, box-shadow, -webkit-transform, -webkit-filter, -webkit-backdrop-filter;
   transition-property: background-color, border-color, color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
@@ -2386,17 +2497,6 @@ video {
 }
 
 @media (min-width: 640px) {
-  .sm\:absolute {
-    position: absolute;
-  }
-
-  .sm\:inset-0 {
-    top: 0px;
-    right: 0px;
-    bottom: 0px;
-    left: 0px;
-  }
-
   .sm\:col-span-2 {
     grid-column: span 2 / span 2;
   }
@@ -2423,6 +2523,11 @@ video {
     margin-right: -1.5rem;
   }
 
+  .sm\:my-8 {
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+  }
+
   .sm\:mt-0 {
     margin-top: 0px;
   }
@@ -2431,28 +2536,20 @@ video {
     margin-top: 1.25rem;
   }
 
-  .sm\:mt-8 {
-    margin-top: 2rem;
+  .sm\:mt-6 {
+    margin-top: 1.5rem;
   }
 
-  .sm\:mt-10 {
-    margin-top: 2.5rem;
+  .sm\:mt-8 {
+    margin-top: 2rem;
   }
 
   .sm\:mt-12 {
     margin-top: 3rem;
   }
 
-  .sm\:mt-24 {
-    margin-top: 6rem;
-  }
-
   .sm\:mt-px {
     margin-top: 1px;
-  }
-
-  .sm\:ml-2 {
-    margin-left: 0.5rem;
   }
 
   .sm\:ml-3 {
@@ -2465,6 +2562,10 @@ video {
 
   .sm\:block {
     display: block;
+  }
+
+  .sm\:inline-block {
+    display: inline-block;
   }
 
   .sm\:flex {
@@ -2488,12 +2589,20 @@ video {
     height: 18rem;
   }
 
+  .sm\:h-screen {
+    height: 100vh;
+  }
+
   .sm\:w-full {
     width: 100%;
   }
 
   .sm\:max-w-xs {
     max-width: 20rem;
+  }
+
+  .sm\:max-w-sm {
+    max-width: 24rem;
   }
 
   .sm\:max-w-md {
@@ -2514,6 +2623,20 @@ video {
 
   .sm\:max-w-3xl {
     max-width: 48rem;
+  }
+
+  .sm\:translate-y-0 {
+    --tw-translate-y: 0px;
+  }
+
+  .sm\:scale-95 {
+    --tw-scale-x: .95;
+    --tw-scale-y: .95;
+  }
+
+  .sm\:scale-100 {
+    --tw-scale-x: 1;
+    --tw-scale-y: 1;
   }
 
   .sm\:grid-cols-2 {
@@ -2582,6 +2705,15 @@ video {
     border-color: rgba(229, 231, 235, var(--tw-border-opacity));
   }
 
+  .sm\:bg-gray-800 {
+    --tw-bg-opacity: 1;
+    background-color: rgba(31, 41, 55, var(--tw-bg-opacity));
+  }
+
+  .sm\:p-0 {
+    padding: 0px;
+  }
+
   .sm\:p-6 {
     padding: 1.5rem;
   }
@@ -2636,16 +2768,20 @@ video {
     padding-right: 0.5rem;
   }
 
+  .sm\:pb-6 {
+    padding-bottom: 1.5rem;
+  }
+
   .sm\:pb-16 {
     padding-bottom: 4rem;
   }
 
-  .sm\:pb-24 {
-    padding-bottom: 6rem;
-  }
-
   .sm\:text-center {
     text-align: center;
+  }
+
+  .sm\:align-middle {
+    vertical-align: middle;
   }
 
   .sm\:text-sm {
@@ -2653,19 +2789,14 @@ video {
     line-height: 1.25rem;
   }
 
-  .sm\:text-base {
-    font-size: 1rem;
-    line-height: 1.5rem;
-  }
-
   .sm\:text-lg {
     font-size: 1.125rem;
     line-height: 1.75rem;
   }
 
-  .sm\:text-xl {
-    font-size: 1.25rem;
-    line-height: 1.75rem;
+  .sm\:text-3xl {
+    font-size: 1.875rem;
+    line-height: 2.25rem;
   }
 
   .sm\:text-4xl {
@@ -2675,10 +2806,6 @@ video {
 
   .sm\:text-5xl {
     font-size: 3rem;
-    line-height: 1;
-  }
-
-  .sm\:leading-none {
     line-height: 1;
   }
 
@@ -2705,6 +2832,14 @@ video {
     grid-column: span 4 / span 4;
   }
 
+  .md\:col-start-1 {
+    grid-column-start: 1;
+  }
+
+  .md\:col-start-4 {
+    grid-column-start: 4;
+  }
+
   .md\:mx-auto {
     margin-left: auto;
     margin-right: auto;
@@ -2720,6 +2855,14 @@ video {
 
   .md\:mt-16 {
     margin-top: 4rem;
+  }
+
+  .md\:mt-20 {
+    margin-top: 5rem;
+  }
+
+  .md\:mt-36 {
+    margin-top: 9rem;
   }
 
   .md\:mb-24 {
@@ -2767,10 +2910,6 @@ video {
     width: auto;
   }
 
-  .md\:max-w-2xl {
-    max-width: 42rem;
-  }
-
   .md\:max-w-7xl {
     max-width: 80rem;
   }
@@ -2785,12 +2924,20 @@ video {
             flex-shrink: 0;
   }
 
+  .md\:grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
   .md\:grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
   .md\:grid-cols-4 {
     grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
+
+  .md\:grid-cols-5 {
+    grid-template-columns: repeat(5, minmax(0, 1fr));
   }
 
   .md\:grid-cols-10 {
@@ -2900,10 +3047,6 @@ video {
     bottom: 0px;
   }
 
-  .lg\:top-0 {
-    top: 0px;
-  }
-
   .lg\:right-0 {
     right: 0px;
   }
@@ -2918,10 +3061,6 @@ video {
 
   .lg\:col-span-5 {
     grid-column: span 5 / span 5;
-  }
-
-  .lg\:col-span-6 {
-    grid-column: span 6 / span 6;
   }
 
   .lg\:m-0 {
@@ -2941,10 +3080,6 @@ video {
   .lg\:-mx-8 {
     margin-left: -2rem;
     margin-right: -2rem;
-  }
-
-  .lg\:mt-0 {
-    margin-top: 0px;
   }
 
   .lg\:mt-2 {
@@ -2975,25 +3110,12 @@ video {
     margin-top: 7rem;
   }
 
-  .lg\:mb-0 {
-    margin-bottom: 0px;
-  }
-
   .lg\:mb-14 {
     margin-bottom: 3.5rem;
   }
 
-  .lg\:ml-0 {
-    margin-left: 0px;
-  }
-
   .lg\:block {
     display: block;
-  }
-
-  .lg\:flex {
-    display: -webkit-flex;
-    display: flex;
   }
 
   .lg\:grid {
@@ -3053,21 +3175,16 @@ video {
             flex-grow: 0;
   }
 
+  .lg\:grid-cols-3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
   .lg\:grid-cols-4 {
     grid-template-columns: repeat(4, minmax(0, 1fr));
   }
 
   .lg\:grid-cols-7 {
     grid-template-columns: repeat(7, minmax(0, 1fr));
-  }
-
-  .lg\:grid-cols-12 {
-    grid-template-columns: repeat(12, minmax(0, 1fr));
-  }
-
-  .lg\:items-center {
-    -webkit-align-items: center;
-            align-items: center;
   }
 
   .lg\:justify-start {
@@ -3111,6 +3228,11 @@ video {
     padding-bottom: 8rem;
   }
 
+  .lg\:py-52 {
+    padding-top: 13rem;
+    padding-bottom: 13rem;
+  }
+
   .lg\:pb-0 {
     padding-bottom: 0px;
   }
@@ -3125,11 +3247,6 @@ video {
 
   .lg\:text-left {
     text-align: left;
-  }
-
-  .lg\:text-sm {
-    font-size: 0.875rem;
-    line-height: 1.25rem;
   }
 
   .lg\:text-lg {
@@ -3170,15 +3287,6 @@ video {
     height: 20rem;
   }
 
-  .xl\:transform-none {
-    -webkit-transform: none;
-            transform: none;
-  }
-
-  .xl\:translate-x-0 {
-    --tw-translate-x: 0px;
-  }
-
   .xl\:gap-x-8 {
     -webkit-column-gap: 2rem;
             column-gap: 2rem;
@@ -3186,26 +3294,6 @@ video {
 
   .xl\:pb-32 {
     padding-bottom: 8rem;
-  }
-
-  .xl\:text-base {
-    font-size: 1rem;
-    line-height: 1.5rem;
-  }
-
-  .xl\:text-xl {
-    font-size: 1.25rem;
-    line-height: 1.75rem;
-  }
-
-  .xl\:text-4xl {
-    font-size: 2.25rem;
-    line-height: 2.5rem;
-  }
-
-  .xl\:text-5xl {
-    font-size: 3rem;
-    line-height: 1;
   }
 }
 
