--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -619,10 +619,6 @@ video {
   margin-top: 3.5rem;
 }
 
-.mt-16 {
-  margin-top: 4rem;
-}
-
 .mt-40 {
   margin-top: 10rem;
 }
@@ -1033,6 +1029,10 @@ video {
 
 .pl-3 {
   padding-left: 0.75rem;
+}
+
+.pl-4 {
+  padding-left: 1rem;
 }
 
 .text-center {
