--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -984,6 +984,11 @@ video {
           flex-direction: column;
 }
 
+.flex-col-reverse {
+  -webkit-flex-direction: column-reverse;
+          flex-direction: column-reverse;
+}
+
 .items-center {
   -webkit-align-items: center;
           align-items: center;
@@ -1070,6 +1075,11 @@ video {
 
 .rounded-full {
   border-radius: 9999px;
+}
+
+.rounded-b-xl {
+  border-bottom-right-radius: 0.75rem;
+  border-bottom-left-radius: 0.75rem;
 }
 
 .border-2 {
@@ -1310,6 +1320,10 @@ video {
   font-weight: 500;
 }
 
+.font-semibold {
+  font-weight: 600;
+}
+
 .font-bold {
   font-weight: 700;
 }
@@ -1487,10 +1501,6 @@ video {
 }
 
 @media (min-width: 640px) {
-  .sm\:grid {
-    display: grid;
-  }
-
   .sm\:hidden {
     display: none;
   }
