--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -672,10 +672,6 @@ video {
   margin-top: 3rem;
 }
 
-.mt-14 {
-  margin-top: 3.5rem;
-}
-
 .mt-16 {
   margin-top: 4rem;
 }
@@ -1313,6 +1309,10 @@ video {
   background-size: cover;
 }
 
+.object-cover {
+  object-fit: cover;
+}
+
 .object-fill {
   object-fit: fill;
 }
@@ -1926,6 +1926,10 @@ video {
     margin-right: auto;
   }
 
+  .xl\:mt-4 {
+    margin-top: 1rem;
+  }
+
   .xl\:block {
     display: block;
   }
@@ -1954,6 +1958,10 @@ video {
     grid-template-columns: repeat(5, minmax(0, 1fr));
   }
 
+  .xl\:grid-cols-8 {
+    grid-template-columns: repeat(8, minmax(0, 1fr));
+  }
+
   .xl\:gap-x-8 {
     -webkit-column-gap: 2rem;
             column-gap: 2rem;
@@ -1963,10 +1971,6 @@ video {
     --tw-space-x-reverse: 0;
     margin-right: calc(0px * var(--tw-space-x-reverse));
     margin-left: calc(0px * calc(1 - var(--tw-space-x-reverse)));
-  }
-
-  .xl\:overflow-hidden {
-    overflow: hidden;
   }
 
   .xl\:overflow-visible {
